[metadata]
name = fhirtordf
url = https://github.com/BD2KOnFHIR/fhirtordf
license = CC0 1.0 Universal
author = Harold Solbrig
author_email = solbrig@jhu.edu
summary = FHIR JSON to RDF Conversion Tool
description = Convert JSON representatin of FHIR resources into RDF
classifiers=
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

keywords =
    FHIR
    rdf

[files]
packages =
    fhirtordf

[entry_points]
console_scripts =
    fhirtordf = fhirtordf.fhirtordf:main

